--- a/game/index.htm
+++ b/game/index.htm
@@ -33,11 +33,15 @@
 
 			function refresh_screen() {
 				frame++;
+				numbers = new Array;
+				for (a = 0; a < 10; a++)
+					numbers[a] = document.getElementById(a);
 				perso_img = document.getElementById(perso.img_id);
 				base = document.getElementById("base");
 				back = document.getElementById("background-day");
 				pipe_up = document.getElementById("pipe-up");
 				pipe_down = document.getElementById("pipe-down");
+				pipe_down = document.getElementById("0");
 				canvas = document.getElementById("canvas").getContext("2d");
 				canvas.canvas.width=window.innerWidth;
 				canvas.canvas.height=window.innerHeight;
@@ -64,6 +68,8 @@
 					canvas.drawImage(base, (336*a), (window.innerHeight-112));
 				canvas.fillText((perso.y)+" | "+(perso.x), 20, 20);
 				canvas.fillText(fps, 20, 40);
+				for (a = 0; points.substr(a, a+1)[a]; a++)
+					canvas.drawImage(numbers[points.substr()[a]], perso.x, perso.y);
 				canvas.drawImage(perso_img, perso.x, perso.y);
 				canvas.stroke();
 				collisions();
@@ -154,6 +160,16 @@
 		<img src="assets/sprites/pipe-green-down.png" id="pipe-down" class="hide"/>
 		<img src="assets/sprites/background-day.png" id="background-day" class="hide"/>
 		<img src="assets/sprites/message.png" id="message" class="hide"/> 
+		<img src="assets/sprites/0.png" id="0" class="hide"/>  
+		<img src="assets/sprites/1.png" id="1" class="hide"/> 
+		<img src="assets/sprites/2.png" id="2" class="hide"/> 
+		<img src="assets/sprites/3.png" id="3" class="hide"/> 
+		<img src="assets/sprites/4.png" id="4" class="hide"/> 
+		<img src="assets/sprites/5.png" id="5" class="hide"/> 
+		<img src="assets/sprites/6.png" id="6" class="hide"/> 
+		<img src="assets/sprites/7.png" id="7" class="hide"/> 
+		<img src="assets/sprites/8.png" id="8" class="hide"/> 
+		<img src="assets/sprites/9.png" id="9" class="hide"/>         
 		<canvas id="canvas"></canvas>
 	</body>
 </html>
