--- a/game/index.htm
+++ b/game/index.htm
@@ -17,6 +17,10 @@
 			vitesse = 10;
 			var fraps;
 			function gameover() {
+
+				numbers = new Array;
+				for (a = 0; a < 10; a++)
+					numbers[a] = document.getElementById("num_"+a);
 				clearInterval(fraps);
 				canvas = document.getElementById("canvas").getContext("2d");
 				canvas.canvas.width=window.innerWidth;
@@ -28,6 +32,8 @@
 				canvas.drawImage(back, window.innerWidth/2, 0, window.innerWidth/2, window.innerHeight);
 				canvas.drawImage(gameover, window.innerWidth/2-96, 100);
 				canvas.drawImage(perso_img, perso.x, perso.y);
+				for (a = 0; (points+'').substr(a, a+1)[a]; a++)
+					canvas.drawImage(numbers[(points+"").substr(a, a+1)[a]], (window.innerWidth/2-((a+1)*24)), 50);
 				canvas.stroke();
 			}
 
@@ -35,16 +41,16 @@
 				frame++;
 				numbers = new Array;
 				for (a = 0; a < 10; a++)
-					numbers[a] = document.getElementById(a);
+					numbers[a] = document.getElementById("num_"+a);
 				perso_img = document.getElementById(perso.img_id);
 				base = document.getElementById("base");
 				back = document.getElementById("background-day");
 				pipe_up = document.getElementById("pipe-up");
 				pipe_down = document.getElementById("pipe-down");
-				pipe_down = document.getElementById("0");
 				canvas = document.getElementById("canvas").getContext("2d");
 				canvas.canvas.width=window.innerWidth;
 				canvas.canvas.height=window.innerHeight;
+				canvas.clearRect(0, 0, canvas.canvas.width, canvas.canvas.height);
 				canvas.moveTo(0,0);
 				canvas.drawImage(back, 0, 0, window.innerWidth/2, window.innerHeight);
 				canvas.drawImage(back, window.innerWidth/2, 0, window.innerWidth/2, window.innerHeight);
@@ -68,8 +74,8 @@
 					canvas.drawImage(base, (336*a), (window.innerHeight-112));
 				canvas.fillText((perso.y)+" | "+(perso.x), 20, 20);
 				canvas.fillText(fps, 20, 40);
-				for (a = 0; points.substr(a, a+1)[a]; a++)
-					canvas.drawImage(numbers[points.substr()[a]], perso.x, perso.y);
+				for (a = 0; (points+'').substr(a, a+1)[a]; a++)
+					canvas.drawImage(numbers[(points+"").substr(a, a+1)[a]], (window.innerWidth/2-((a+1)*24)), 50);
 				canvas.drawImage(perso_img, perso.x, perso.y);
 				canvas.stroke();
 				collisions();
@@ -112,7 +118,7 @@
 				if (falling == 0)
 					return;
 				perso.img_id = "perso-down";
-				vitesse *= 1.0001;
+				vitesse += 0.1;
 				perso.y += vitesse;
 				setTimeout("fall();", 20);
 			}
@@ -124,7 +130,7 @@
 				perso.y -= vitesse;
 				if (perso.y < base-80 || perso.y < 0)
 				{
-					vitesse = 10;
+					vitesse = 7;
 					falling = 1;
 					fall();
 					return;
@@ -160,16 +166,16 @@
 		<img src="assets/sprites/pipe-green-down.png" id="pipe-down" class="hide"/>
 		<img src="assets/sprites/background-day.png" id="background-day" class="hide"/>
 		<img src="assets/sprites/message.png" id="message" class="hide"/> 
-		<img src="assets/sprites/0.png" id="0" class="hide"/>  
-		<img src="assets/sprites/1.png" id="1" class="hide"/> 
-		<img src="assets/sprites/2.png" id="2" class="hide"/> 
-		<img src="assets/sprites/3.png" id="3" class="hide"/> 
-		<img src="assets/sprites/4.png" id="4" class="hide"/> 
-		<img src="assets/sprites/5.png" id="5" class="hide"/> 
-		<img src="assets/sprites/6.png" id="6" class="hide"/> 
-		<img src="assets/sprites/7.png" id="7" class="hide"/> 
-		<img src="assets/sprites/8.png" id="8" class="hide"/> 
-		<img src="assets/sprites/9.png" id="9" class="hide"/>         
+		<img src="assets/sprites/0.png" id="num_0" class="hide"/>  
+		<img src="assets/sprites/1.png" id="num_1" class="hide"/> 
+		<img src="assets/sprites/2.png" id="num_2" class="hide"/> 
+		<img src="assets/sprites/3.png" id="num_3" class="hide"/> 
+		<img src="assets/sprites/4.png" id="num_4" class="hide"/> 
+		<img src="assets/sprites/5.png" id="num_5" class="hide"/> 
+		<img src="assets/sprites/6.png" id="num_6" class="hide"/> 
+		<img src="assets/sprites/7.png" id="num_7" class="hide"/> 
+		<img src="assets/sprites/8.png" id="num_8" class="hide"/> 
+		<img src="assets/sprites/9.png" id="num_9" class="hide"/>         
 		<canvas id="canvas"></canvas>
 	</body>
 </html>
